fix bug with title on mobile in volume analyzer

--- a/src/app/modules/insertions/volume-analyzer/volume-analyzer.component.scss
+++ b/src/app/modules/insertions/volume-analyzer/volume-analyzer.component.scss
@@ -140,6 +140,10 @@
   margin-bottom: 1.938em;
 }
 
+.container__name{
+  margin-bottom: 10px;
+}
+
 .error-field--analyzer{
   margin-top: .938em;
 }
